# Resume-Tailorer

./: main.py  pdf_generator.py  pyproject.toml
